# Arxiv_daily

./: .env.example  .gitignore  README.md  pyproject.toml
src/arxiv_daily/: __init__.py  arxiv_client.py  cli.py  config.py  http_utils.py  openai_client.py  pipeline.py
