[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-daily"
version = "0.1.0"
description = "Daily arXiv paper digest for selected domains using the OpenAI API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
arxiv-daily = "arxiv_daily.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
